--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Property Addresses</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-  
-  <style>
+<% content_for :title, "Property Addresses" %>
+
+<style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       max-width: 1200px;
@@ -259,9 +253,6 @@
       font-size: 11px;
     }
   </style>
-</head>
-
-<body>
   <div class="container">
     <h1>🏘️ Property Addresses</h1>
     
@@ -383,5 +374,3 @@
       </div>
     <% end %>
   </div>
-</body>
-</html>
